# PicoTrafficLight

./: CMakeLists.txt  README.md  commonSequences.h  common_sequences.h  controller.cpp  controller.h  main.cpp  sequence.cpp  sequence.h  trafficlight.cpp  trafficlight.h  trafficlight_group.cpp  trafficlight_group.h
.github/: FUNDING.yml
.github/workflows/: build.yml
Systems/: abstract_system.h  light_test_system.cpp  light_test_system.h  na_stop_give_way_system.cpp  na_stop_give_way_system.h  sequenced_interruptable_system.cpp  sequenced_interruptable_system.h  single_interruptable_crossing_system.cpp  single_interruptable_crossing_system.h  standard_sequence_interruptable_system.cpp  standard_sequence_interruptable_system.h
